kubernetes/kind/service/03_Ingress.yml
# ==========================================
# 1. Create Namespace
# ==========================================
apiVersion: v1
kind: Namespace
metadata:
  name: dev-ns


---
# ==========================================
# 2. Create Pod
# ==========================================
apiVersion: v1
kind: Pod
metadata:
  name: shopping-pod
  labels:
    app: shopping-app
spec:
  containers:
    - name: shopping
      image: piyushthaware07/simple-fastapi:latest
      ports:
        - containerPort: 8000
